# self-studdy

./: .gitignore  api.tf  api_integration.tf  api_permissions.tf  export.sh  lambdas.tf  main.py  main.tf  policies.tf  pyproject.toml  requirements.txt  routes.tf  stages.tf  todo.txt
bootstrap/: handler.py
scripts/: build_common_layer.sh  build_dependencies_layer.sh  build_layer.sh  deploy_all.sh  deploy_function.sh  deploy_layer.sh  todo.md  update_layer.sh
src/: api.py  exceptions.py  handlers.py  hello_lambda.py  middleware.py  model.py  repository.py  serializers.py  services.py  users.py  utlis.py
src/common/: api.py  exceptions.py  logging.py  middleware.py  repository.py  serializers.py  services.py
src/delete_show/: handler.py
src/get_episodes/: handler.py
src/get_seasons/: handler.py
src/get_show/: handler.py
src/post_episode/: handler.py
src/post_season/: handler.py
src/post_show/: handler.py
terraform/: api_integration.tf  api_permissions.tf  dynamodb.tf  iamroles.tf  lambdas.tf  locals.tf  main.tf  outputs.tf  policies.tf  routes.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  factories.py  test_api.py  test_handlers.py  test_middleware.py  test_repository.py  test_serializers.py  test_services.py  test_utils.py
