[project]
name = "self-studdy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.40",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "moto[all]>=5.2.2",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ty.enviroment]
python-path = ["src"]
